[package]
name = "carapax"
description = "A Telegram Bot Framework"
version = "0.26.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2021"
readme = "./README.md"
license = "MIT"
documentation = "https://docs.rs/carapax"
repository = "https://github.com/tg-rs/carapax"

[features]
# include nothing by default
default = []

# enable everything
full = ["access", "dialogue", "ratelimit", "session-redis", "session-fs", "webhook"]

access = ["dep:serde"]
dialogue = ["session", "dep:serde"]
ratelimit = ["dep:governor", "dep:nonzero_ext"]
session = ["dep:seance"]
session-fs = ["session", "seance?/fs-backend"]
session-redis = ["session", "seance?/redis-backend"]
webhook = ["tgbot/webhook"]

[dependencies]
futures-util = "0.3"
governor = { version = "0.7", optional = true }
log = "0.4"
nonzero_ext = { version = "0.3", optional = true }
seance = { version = "0.15", optional = true }
serde = { version = "1.0", optional = true }
tgbot = "0.32"
tokio = "1.41"

[dev-dependencies]
dotenvy = "0.15"
env_logger = "0.11"
regex = "1.11"
serde_json = "1.0"
tempfile = "3.14"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
toml = "0.8"

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(nightly)'] }

[[example]]
name = "app"
required-features = ["full"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]
