[package]
name = "carapax"
version = "0.33.0"
edition = "2024"
description = "A Telegram Bot Framework"
documentation = "https://docs.rs/carapax"
readme = "./README.md"
repository = "https://github.com/tg-rs/carapax"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]

[[example]]
name = "app"
required-features = ["full"]

[dependencies]
futures-util = "0.3"
governor = { version = "0.10", optional = true }
log = "0.4"
nonzero_ext = { version = "0.3", optional = true }
seance = { version = "0.20", optional = true }
serde = { version = "1", optional = true }
tgbot = "0.41"
tokio = "1"

[dev-dependencies]
dotenvy = "0.15"
env_logger = "0.11"
regex = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.9"

[features]
# include nothing by default
default = []
access = ["dep:serde"]
dialogue = ["dep:serde", "session"]
# enable everything
full = [
  "access",
  "dialogue",
  "ratelimit",
  "session-fs",
  "session-redis",
  "webhook"
]
ratelimit = ["dep:governor", "dep:nonzero_ext"]
session = ["dep:seance"]
session-fs = ["seance?/fs-backend", "session"]
session-redis = ["seance?/redis-backend", "session"]
webhook = ["tgbot/webhook"]

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(nightly)"] }
