[package]
name = "carapax-access"
description = "Access handler for carapax"
version = "0.1.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/carapax-access"
repository = "https://github.com/tg-rs/carapax-access"

[badges]
travis-ci = { repository = "tg-rs/tg-rs", branch = "master" }
codecov = { repository = "tg-rs/tg-rs" }

[dependencies]
failure = "0.1"
futures = "0.1"
carapax = { path = "../carapax" }
log = "0.4"

[dev-dependencies]
dotenv = "0.13.0"
env_logger = "0.6.1"
log = "0.4.6"
serde_json = "1.0"
tokio = "0.1.17"
