[package]
name = "carapax-access"
description = "Access handler for carapax"
version = "0.1.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/carapax-access"
repository = "https://github.com/tg-rs/tg-rs"

[dependencies]
carapax = { path = "../carapax" }
log = "0.4.8"

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.7.1"
serde_json = "1.0.44"
tokio = { version = "0.2.6", features = ["macros"]}
