[package]
name = "carapax-access"
description = "Access handler for carapax"
version = "0.2.1"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/carapax-access"
repository = "https://github.com/tg-rs/tg-rs"

[dependencies]
carapax = { path = "../carapax" }
log = "0.4"

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.7"
serde_json = "1"
tokio = { version = "0.2", features = ["macros"]}
