[package]
name = "carapax-codegen"
version = "0.1.1"
description = "Procedural macroses for carapax"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
