[package]
name = "carapax-codegen"
version = "0.2.0"
description = "Procedural macroses for carapax"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
