[package]
name = "carapax-i18n"
description = "An i18n utilities for carapax"
version = "0.1.0"
authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>", "Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/carapax-i18n"
repository = "https://github.com/tg-rs/tg-rs"
exclude = ["data/**"]

[dependencies]
carapax = { path = "../carapax" }
gettext = "0.4.0"

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.7.1"
serde_json = "1.0.44"
tokio = { version = "0.2.6", features = ["macros"]}
