[package]
name = "carapax-i18n"
description = "An i18n utilities for carapax"
version = "0.2.1"
authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>", "Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/carapax-i18n"
repository = "https://github.com/tg-rs/tg-rs"
exclude = ["data/**"]

[dependencies]
carapax = { path = "../carapax" }
gettext = "0.4"

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.7"
serde_json = "1"
tokio = { version = "0.2", features = ["macros"]}
