[package]
name = "carapax-ratelimit"
description = "Rate limit handler for carapax"
version = "0.1.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/carapax-ratelimit"
repository = "https://github.com/tg-rs/carapax-ratelimit"

[badges]
travis-ci = { repository = "tg-rs/tg-rs", branch = "master" }
codecov = { repository = "tg-rs/tg-rs" }

[dependencies]
carapax = { path = "../carapax" }
nonzero_ext = "0.1"
ratelimit_meter = "4.0"

[dev-dependencies]
dotenv = "0.13.0"
env_logger = "0.6.1"
log = "0.4.6"
tokio = "0.1.17"
