[package]
name = "carapax-ratelimit"
description = "Rate limit handler for carapax"
version = "0.2.1"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/carapax-ratelimit"
repository = "https://github.com/tg-rs/tg-rs"

[dependencies]
carapax = { path = "../carapax" }
nonzero_ext = { version = "0.2", default-features = false }
ratelimit_meter = "5"
tokio = { version = "0.2", default-features = false, features = ["sync"]}

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.7"
log = "0.4"
serde_json = "1"
tokio = { version = "0.2", default-features = false, features = ["sync", "macros"]}
