[package]
name = "carapax-session"
description = "Session handler for carapax"
version = "0.1.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/carapax-session"
repository = "https://github.com/tg-rs/tg-rs"

[features]
fs-store = ["tokio-fs"]
redis-store = ["redis"]

[dependencies]
carapax = { path = "../carapax" }
failure = "0.1.5"
futures = "0.1.25"
log = "0.4.6"
serde = "1.0.89"
serde_json = "1.0.39"
tokio-executor = "0.1.7"
tokio-timer = "0.2.10"

# fs-store
tokio-fs = {version = "0.1.6", optional = true}

# redis-store
redis = { version = "0.10.0", optional = true }

[dev-dependencies]
dotenv = "0.13.0"
env_logger = "0.6.1"
log = "0.4.6"
tempfile = "3.0.8"
tokio = "0.1.17"
