[package]
name = "carapax-session"
description = "A session utilities for carapax"
version = "0.2.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/carapax-session"
repository = "https://github.com/tg-rs/tg-rs"

[features]
redis-backend = ["seance/redis-backend"]
fs-backend = ["seance/fs-backend"]

[dependencies]
carapax = { path = "../carapax" }
seance = "0.2"
tokio = { version = "0.2", default-features = false, features = ["sync"] }

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.7"
log = "0.4"
tempfile = "3.1"
tokio = { version = "0.2", default-features = false, features = ["sync", "macros"] }
