[package]
name = "carapax"
description = "A Telegram Bot Framework"
version = "0.4.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/carapax"
repository = "https://github.com/tg-rs/tg-rs"
exclude = ["data/**"]

[features]
access = []
i18n = ["gettext"]
ratelimit = ["nonzero_ext", "ratelimit_meter"]
session = ["seance"]
session-redis = ["session", "seance/redis-backend"]
session-fs = ["session", "seance/fs-backend"]

[dependencies]
async-trait = "0.1"
carapax-codegen = { path = "../carapax-codegen" }
gettext = { version = "0.4", optional = true }
log = "0.4"
nonzero_ext = { version = "0.2", default-features = false, optional = true }
ratelimit_meter = { version = "5", optional = true}
shellwords = "1"
tgbot = { git = "https://github.com/tg-rs/tgbot" }
tokio = "0.2"
seance = { version = "0.2", optional = true }

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.7"
serde_json = "1"
tempfile = "3"
tokio = { version = "0.2", features = ["macros"]}

[[example]]
name = "access"
required-features = ["access"]

[[example]]
name = "i18n"
required-features = ["i18n"]

[[example]]
name = "ratelimit"
required-features = ["ratelimit"]

[[example]]
name = "session"
required-features = ["session-fs"]
