[package]
name = "carapax"
description = "A Telegram Bot Framework"
version = "0.5.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "../README.md"
license = "MIT"
documentation = "https://docs.rs/carapax"
repository = "https://github.com/tg-rs/carapax"
exclude = ["data/**"]

[features]
# include nothing by default
default = []

# enable everything
full = ["access", "dialogue", "i18n", "ratelimit", "session-redis", "session-fs"]

access = []
dialogue = ["serde", "session"]
i18n = ["gettext"]
ratelimit = ["nonzero_ext", "ratelimit_meter", "tokio/sync"]
session = ["seance"]
session-redis = ["session", "seance/redis-backend"]
session-fs = ["session", "seance/fs-backend"]

[dependencies]
async-trait = "0.1"
carapax-codegen = "0.2"
gettext = { version = "0.4", optional = true }
log = "0.4"
nonzero_ext = { version = "0.2", default-features = false, optional = true }
ratelimit_meter = { version = "5", optional = true }
serde = { version = "1", optional = true }
tgbot = "0.7"
tokio = "0.2"
seance = { version = "0.3", optional = true }

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.7"
serde_json = "1"
tempfile = "3"
tokio = { version = "0.2", features = ["sync", "macros"]}

[[example]]
name = "access"
required-features = ["access"]

[[example]]
name = "dialogue"
required-features = ["dialogue", "session-fs"]

[[example]]
name = "i18n"
required-features = ["i18n"]

[[example]]
name = "ratelimit"
required-features = ["ratelimit"]

[[example]]
name = "session"
required-features = ["session-fs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]
