[package]
name = "carapax"
description = "A Telegram Bot Framework"
version = "0.10.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "../README.md"
license = "MIT"
documentation = "https://docs.rs/carapax"
repository = "https://github.com/tg-rs/carapax"
exclude = ["data/**"]

[features]
# include nothing by default
default = []

# enable everything
full = ["access", "dialogue", "i18n", "ratelimit", "session-redis", "session-fs"]

access = []
dialogue = ["serde", "session"]
i18n = ["gettext"]
ratelimit = ["nonzero_ext", "ratelimit_meter", "tokio/sync"]
session = ["seance"]
session-redis = ["session", "seance/redis-backend"]
session-fs = ["session", "seance/fs-backend"]

[dependencies]
async-trait = "0.1"
carapax-codegen = "0.2"
gettext = { version = "0.4", optional = true }
log = "0.4"
nonzero_ext = { version = "0.2", default-features = false, optional = true }
ratelimit_meter = { version = "5.0", optional = true }
serde = { version = "1.0", optional = true }
tgbot = { git = "https://github.com/tg-rs/tgbot", branch = "no-async-trait" }
tokio = "1.0"
seance = { version = "0.5", optional = true }
# TODO: use util instead
futures = "0.3.12"
anyhow = "1.0.38"

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.8"
serde_json = "1.0"
tempfile = "3.1"
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"]}
thiserror = "1.0.23"

[[example]]
name = "access"
required-features = ["access"]

[[example]]
name = "dialogue"
required-features = ["dialogue", "session-fs"]

[[example]]
name = "i18n"
required-features = ["i18n"]

[[example]]
name = "ratelimit"
required-features = ["ratelimit"]

[[example]]
name = "session"
required-features = ["session-fs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]
