[package]
name = "test-readme"
description = "Tests for README.md"
version = "0.0.0"
edition = "2018"

[dependencies]
carapax = { path = "../carapax" }
carapax-access = { path = "../carapax-access" }
carapax-i18n = { path = "../carapax-i18n" }
carapax-ratelimit = { path = "../carapax-ratelimit" }
carapax-session = { path = "../carapax-session", features = ["fs-backend"] }
tempfile = "3.1"
tokio = { version = "0.2", features = ["macros"] }

[workspace]
