[package]
name = "tgbot"
description = "A Telegram Bot library"
version = "0.4.1"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/tgbot"
repository = "https://github.com/tg-rs/tg-rs"

[dependencies]
derive_more = "0.14.0"
failure = "0.1.5"
futures = "0.1.23"
hyper = "0.12.15"
hyper-multipart-rfc7578 = "0.3.0"
hyper-proxy = "0.5.0"
hyper-socks2 = "0.2.0"
hyper-tls = "0.3.0"
log = "0.4.6"
mime = "0.3.13"
serde = { version = "1.0.60", features = ["derive"] }
serde_json = "1.0.25"
tokio-executor = "0.1.5"
tokio-sync = "0.1.3"
tokio-timer = "0.2.4"
typed-headers = "0.1.0"
url = "1.7.0"
lazy-queue = "0.1.1"

[dev-dependencies]
dotenv = "0.13.0"
env_logger = "0.6.0"
mockito = "0.17.0"
tokio = { version = "0.1.7", default-features = false }
tempfile = "3.0.8"
