[package]
name = "tgbot"
description = "A Telegram Bot library"
version = "0.4.4"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/tgbot"
repository = "https://github.com/tg-rs/tg-rs"

[dependencies]
async-stream = "0.2.0"
async-trait = "0.1.22"
bytes = "0.5.3"
derive_more = "0.99.2"
futures-util = "0.3.1"
http = "0.2.0"
hyper = "0.13.1"
log = "0.4.8"
mime = "0.3.14"
mime_guess = "2.0.1"
reqwest = { version = "0.10.0", features = ["json", "rustls-tls"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
tokio = {version = "0.2.6", features = ["fs"]}
url = "2.1.0"

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.7.1"
mockito = "0.22.0"
tempfile = "3.1.0"
tokio = {version = "0.2.6", features = ["fs", "macros"]}
