[package]
name = "tgbot"
description = "A Telegram Bot library"
version = "0.6.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/tgbot"
repository = "https://github.com/tg-rs/tg-rs"

[dependencies]
async-stream = "0.2"
async-trait = "0.1"
bytes = "0.5"
derive_more = "0.99"
futures-util = "0.3"
http = "0.2"
hyper = "0.13"
log = "0.4"
mime = "0.3"
mime_guess = "2"
reqwest = { version = ">= 0.10.1, < 0.11", default-features = false, features = ["socks", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version = "0.2", features = ["fs"]}
url = "2"

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.7"
mockito = "0.23.2"
tempfile = "3"
tokio = {version = "0.2", features = ["fs", "macros"]}
