[package]
name = "util-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carapax = { path = ".." }
log = "0.4"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
tempfile = "3.2"

[features]
session = ["carapax/session-fs"]
